--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "framework"]
 	path = framework
 	url = git://github.com/rpetrich/theos.git
+[submodule "Localization"]
+	path = Localization
+	url = git://github.com/rpetrich/Localization.git
